--- a/index.html
+++ b/index.html
@@ -9,14 +9,17 @@
     <title>Document</title>
 
     <!-- Order very important! -->
+    <script src="models/drawableObject.class.js"></script>
     <script src="models/movable-object.class.js"></script>
     <script src="models/character.class.js"></script>
     <script src="models/chicken.class.js"></script>
     <script src="models/cloud.class.js"></script>
+    <script src="models/status-bar.class.js"></script>
     <script src="models/world.class.js"></script>
     <script src="models/background-object.class.js"></script>
     <script src="models/keybard.class.js"></script>
     <script src="models/level.class.js"></script>
+    <script src="models/throwable-object.class.js"></script>
     <script src="models/endboss.class.js"></script>
     <script src="levels/level1.js"></script>
     <script src="js/game.js"></script>
