--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="models/chicken.class.js"></script>
     <script src="models/cloud.class.js"></script>
     <script src="models/status-bar.class.js"></script>
+    <script src="models/endboss-bar.class.js"></script>
     <script src="models/coin-bar.class.js"></script>
     <script src="models/bottle-bar.class.js"></script>
     <script src="models/world.class.js"></script>
