So far everything is fine.

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <script src="models/endboss.class.js"></script>
     <script src="models/coins.class.js"></script>
     <script src="models/bottles.class.js"></script>
+    <script src="models/gameOver.class.js"></script>
     <script src="levels/level1.js"></script>
     <script src="js/game.js"></script>
 
