--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <script src="models/coins.class.js"></script>
     <script src="models/bottles.class.js"></script>
     <script src="models/gameOver.class.js"></script>
+    <script src="models/youLost.class.js"></script>
     <script src="levels/level1.js"></script>
     <script src="js/game.js"></script>
 
