So far everything is fine.

--- a/index.html
+++ b/index.html
@@ -81,6 +81,10 @@
                 </td>
             </tr>
         </table>
+
+        <div class="button" onclick="start()">
+            <b>Here we go!</b>
+        </div>
         
     </div>
     <canvas id="canvas" width="720" height="480">
