So far everything is fine.

--- a/index.html
+++ b/index.html
@@ -55,15 +55,18 @@
         <div class="button" onclick="hereWeGo()">
             <b>Here we go !</b>
         </div>
+        <div class="how-it-goes">
+            <a href="#how-it-goes"><b>How it goes:</b></a>
+        </div>
 
         <div class="span">
-            El pollo loco is a jump and run game. Fight your way through a
-            horde of small chickens through to the final boss and defeat him.
+            El pollo loco is a jump and run game. Fight your way through a horde of chickens
+            to the final boss and collect coins and bottles to defeat him.
         </div>
-        <div class="span">
+        <div>
             <b>That is how it goes:</b>
         </div>
-        <table>
+        <table id="how-it-goes">
             <tr>
                 <td>
                     Move Pepe to the right: <br>
@@ -97,8 +100,9 @@
 
         </canvas>
 
-        <div class="reload-button d-none"id="playAgain">
-            <b>R&nbsp;e&nbsp;s&nbsp;t&nbsp;a&nbsp;r&nbsp;t&nbsp; : &nbsp; P l e a s e &nbsp;  r e l o a d &nbsp;  t h e &nbsp;  p a g e.</b>
+        <div class="reload-button d-none" id="playAgain">
+            <b>R&nbsp;e&nbsp;s&nbsp;t&nbsp;a&nbsp;r&nbsp;t&nbsp; : &nbsp; P l e a s e &nbsp; r e l o a d &nbsp; t h e
+                &nbsp; p a g e .</b>
         </div>
 
     </div>
