--- a/index.html
+++ b/index.html
@@ -96,7 +96,9 @@
     </div>
     <div>
         <canvas class="canvas d-none" width="720" height="480" id="canvas">
+            <div id="innerCanvas">
 
+            </div>
 
         </canvas>
 
