--- a/index.html
+++ b/index.html
@@ -102,9 +102,8 @@
 
         </canvas>
 
-        <div class="reload-button d-none" id="playAgain">
-            <b>R&nbsp;e&nbsp;s&nbsp;t&nbsp;a&nbsp;r&nbsp;t&nbsp; : &nbsp; P l e a s e &nbsp; r e l o a d &nbsp; t h e
-                &nbsp; p a g e .</b>
+        <div class="reload-button d-none" id="playAgain" onclick="hereWeGo()">
+            <b>NEW START</b>
         </div>
 
     </div>
