--- a/index.html
+++ b/index.html
@@ -60,8 +60,14 @@
         </div>
 
         <div class="span">
-            El pollo loco is a jump and run game. Fight your way through a horde of chickens
-            to the final boss and collect coins and bottles to defeat him.
+            El pollo loco is a jump and run game.
+
+            Fight your way through a horde of chickens to the final boss by collecting the bottles on the way 
+            and then throwing them at your opponents. Collect all ten coins to win.
+
+            When you win the game, "Game Over" will appear on the screen.
+            <br><br>
+            Have fun !
         </div>
         <div>
             <b>That is how it goes :</b>
@@ -105,6 +111,8 @@
         <div class="reload-button d-none" id="playAgain" onclick="hereWeGo()">
             <b>NEW START</b>
         </div>
+
+    
 
     </div>
 
