index.html: title changed

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap" rel="stylesheet">
 
-    <title>Document</title>
+    <title>El pollo loco</title>
 
     <!-- Order very important! -->
     <script src="models/drawableObject.class.js"></script>
