Start-Screen responsive: upgrade

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 
         <img id="start-screen" class="startScreen" src='img/9.Intro _ Outro Image/Start Screen/Opción 1.png'>
 
+
         <div class="button" onclick="hereWeGo()">
             <b>Here we go !</b>
         </div>
@@ -59,45 +60,47 @@
             <a href="#how-it-goes"><b>How it goes :</b></a>
         </div>
 
-        <div class="span">
-            El pollo loco is a jump and run game.
+        <div class="informationArea">
+            <div class="span">
+                El pollo loco is a jump and run game.
 
-            Fight your way through a horde of chickens to the final boss by collecting the bottles on the way 
-            and then throwing them at your opponents. Collect all ten coins to win.
+                Fight your way through a horde of chickens to the final boss by collecting the bottles on the way
+                and then throwing them at your opponents. Collect all ten coins to win.
 
-            When you win the game, "Game Over" will appear on the screen.
-            <br><br>
-            Have fun !
+                When you win the game, "Game Over" will appear on the screen.
+                <br><br>
+                Have fun !
+            </div>
+            <div>
+                <b>That is how it goes :</b>
+            </div>
+            <table id="how-it-goes">
+                <tr>
+                    <td>
+                        Move Pepe to the right: <br>
+                        Press the arrow <b> key right </b>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Move Pepe to the left: <br>
+                        Press the arrow <b> key left </b>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Let Pepe jump: <br>
+                        <b> Space </b>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Throw a bottle: <br>
+                        <b> D </b>
+                    </td>
+                </tr>
+            </table>
         </div>
-        <div>
-            <b>That is how it goes :</b>
-        </div>
-        <table id="how-it-goes">
-            <tr>
-                <td>
-                    Move Pepe to the right: <br>
-                    Press the arrow <b> key right </b>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    Move Pepe to the left: <br>
-                    Press the arrow <b> key left </b>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    Let Pepe jump: <br>
-                    <b> Space </b>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    Throw a bottle: <br>
-                    <b> D </b>
-                </td>
-            </tr>
-        </table>
 
     </div>
     <div>
@@ -112,7 +115,7 @@
             <b>NEW START</b>
         </div>
 
-    
+
 
     </div>
 
