Integrated move-keys classes in index.html in <head>-area

--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
     <script src="models/bottles.class.js"></script>
     <script src="models/game-over.class.js"></script>
     <script src="models/you-lost.class.js"></script>
+
+    <script src="models/move-keys/A.class.js"></script>
+    <script src="models/move-keys/B.class.js"></script>
+    <script src="models/move-keys/move-left.class.js"></script>
+    <script src="models/move-keys/move-right.class.js"></script>
+
     <script src="levels/level1.js"></script>
     <script src="js/game.js"></script>
     <script src="js/here-we-go.js"></script>
