Integrated move-keys: error message

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
     <script src="models/game-over.class.js"></script>
     <script src="models/you-lost.class.js"></script>
 
-    <script src="models/move-keys/A.class.js"></script>
-    <script src="models/move-keys/B.class.js"></script>
-    <script src="models/move-keys/move-left.class.js"></script>
-    <script src="models/move-keys/move-right.class.js"></script>
+    <script src="models/A.class.js"></script> <!--move-keys/-->
+    <script src="models/B.class.js"></script>
+    <script src="models/move-left.class.js"></script>
+    <script src="models/move-right.class.js"></script>
 
     <script src="levels/level1.js"></script>
     <script src="js/game.js"></script>
