--- a/index.html
+++ b/index.html
@@ -112,11 +112,11 @@
 
             </canvas>
             <div class="key-button-area">
-                <img class="left-key-button" src="img/10.Keys/left.png">
-                <img class="right-key-button" src="img/10.Keys/right.png">
+                <img class="left-key-button" src="img/10.Keys/left.png" id="leftKey">
+                <img class="right-key-button" src="img/10.Keys/right.png" id="rightKey">
 
-                <img class="a-key-button" src="img/10.Keys/A.png">
-                <img class="b-key-button" src="img/10.Keys/B.png">
+                <img class="a-key-button" src="img/10.Keys/A.png" id="AKey">
+                <img class="b-key-button" src="img/10.Keys/B.png" id="BKey">
             </div>
         </div>
         <div class="reload-button d-none" id="playAgain" onclick="hereWeGo()">
