keyboard.class.js addEventListener('keydown'): e.keyCode == 68: After a click, the D key only becomes functional again after a second.

--- a/index.html
+++ b/index.html
@@ -111,13 +111,13 @@
             <canvas class="canvas d-none" width="720" height="480" id="canvas">
 
             </canvas>
-            <div class="key-button-area">
+            <!--<div class="key-button-area">-->
                 <img class="left-key-button" src="img/10.Keys/left.png" id="leftKey">
                 <img class="right-key-button" src="img/10.Keys/right.png" id="rightKey">
 
                 <img class="a-key-button" src="img/10.Keys/A.png" id="AKey">
                 <img class="b-key-button" src="img/10.Keys/B.png" id="BKey">
-            </div>
+            <!--</div>-->
         </div>
         <div class="reload-button d-none" id="playAgain" onclick="hereWeGo()">
             <b>NEW START</b>
