Small correction in button id=turnOffControlButtons

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             <b>Turn on control buttons (Only for touchscreen)</b>
         </div>
         <div class="turn-control-button d-none" id="turnOffControlButtons" onclick="turnOffControlButtons()">
-            <b>Turn off control buttons (Only for touchscreen)</b>
+            <b>Turn off control buttons (Only for a game with a keyboard)</b>
         </div>
 
 
