Description control buttons changed

--- a/index.html
+++ b/index.html
@@ -111,10 +111,10 @@
             <b>NEW START</b>
         </div>
         <div class="turn-control-button" id="turnOnControlButtons" onclick="turnOnControlButtons()">
-            <b>Turn on control buttons (Only for touchscreen)</b>
+            <b>Turn on control buttons (Only suitable for touchscreen.)</b>
         </div>
         <div class="turn-control-button d-none" id="turnOffControlButtons" onclick="turnOffControlButtons()">
-            <b>Turn off control buttons (Only for a game with a keyboard)</b>
+            <b>Turn off control buttons (Only suitable for keyboard.)</b>
         </div>
         <div class="canvas-area">
             <canvas class="canvas" width="720" height="480" id="canvas">
